# triangles

./: CMakeLists.txt  README.md  main.cpp
